test/tests/stages/1_int_constants/invalid_parse/switched_parens.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[9]:
  int
  identifier(main)
  )
  (
  {
  return
  const int(0)
  ;
  }
